src/binding/petsc4py/src/PETSc/petscsec.pxi

# --------------------------------------------------------------------

cdef extern from * nogil:

    int PetscSectionCreate(MPI_Comm,PetscSection*)
    int PetscSectionClone(PetscSection,PetscSection*)
    int PetscSectionSetUp(PetscSection)
    int PetscSectionSetUpBC(PetscSection)
    int PetscSectionView(PetscSection,PetscViewer)
    int PetscSectionReset(PetscSection)
    int PetscSectionDestroy(PetscSection*)

    int PetscSectionGetNumFields(PetscSection,PetscInt*)
    int PetscSectionSetNumFields(PetscSection,PetscInt)
    int PetscSectionGetFieldName(PetscSection,PetscInt,const char*[])
    int PetscSectionSetFieldName(PetscSection,PetscInt,const char[])
    int PetscSectionGetFieldComponents(PetscSection,PetscInt,PetscInt*)
    int PetscSectionSetFieldComponents(PetscSection,PetscInt,PetscInt)
    int PetscSectionGetChart(PetscSection,PetscInt*,PetscInt*)
    int PetscSectionSetChart(PetscSection,PetscInt,PetscInt)
    int PetscSectionGetPermutation(PetscSection,PetscIS*)
    int PetscSectionSetPermutation(PetscSection,PetscIS)
    int PetscSectionGetCount(PetscSection,PetscInt,PetscInt*)
    int PetscSectionSetCount(PetscSection,PetscInt,PetscInt)
    int PetscSectionAddCount(PetscSection,PetscInt,PetscInt)
    int PetscSectionGetFieldCount(PetscSection,PetscInt,PetscInt,PetscInt*)
    int PetscSectionSetFieldCount(PetscSection,PetscInt,PetscInt,PetscInt)
    int PetscSectionAddFieldCount(PetscSection,PetscInt,PetscInt,PetscInt)
    int PetscSectionGetConstraintCount(PetscSection,PetscInt,PetscInt*)
    int PetscSectionSetConstraintCount(PetscSection,PetscInt,PetscInt)
    int PetscSectionAddConstraintCount(PetscSection,PetscInt,PetscInt)
    int PetscSectionGetFieldConstraintCount(PetscSection,PetscInt,PetscInt,PetscInt*)
    int PetscSectionSetFieldConstraintCount(PetscSection,PetscInt,PetscInt,PetscInt)
    int PetscSectionAddFieldConstraintCount(PetscSection,PetscInt,PetscInt,PetscInt)
    int PetscSectionGetConstraintIndices(PetscSection,PetscInt,const PetscInt**)
    int PetscSectionSetConstraintIndices(PetscSection,PetscInt,const PetscInt*)
    int PetscSectionGetFieldConstraintIndices(PetscSection,PetscInt,PetscInt,const PetscInt**)
    int PetscSectionSetFieldConstraintIndices(PetscSection,PetscInt,PetscInt,const PetscInt*)
    int PetscSectionGetMaxCount(PetscSection,PetscInt*)
    int PetscSectionGetStorageSize(PetscSection,PetscInt*)
    int PetscSectionGetConstrainedStorageSize(PetscSection,PetscInt*)
    int PetscSectionGetOffset(PetscSection,PetscInt,PetscInt*)
    int PetscSectionSetOffset(PetscSection,PetscInt,PetscInt)
    int PetscSectionGetFieldOffset(PetscSection,PetscInt,PetscInt,PetscInt*)
    int PetscSectionSetFieldOffset(PetscSection,PetscInt,PetscInt,PetscInt)
    int PetscSectionGetOffsetRange(PetscSection,PetscInt*,PetscInt*)
    int PetscSectionCreateGlobalSection(PetscSection,PetscSF,PetscBool,PetscBool,PetscSection*)
    #int PetscSectionCreateGlobalSectionCensored(PetscSection,PetscSF,PetscBool,PetscInt,const PetscInt[],PetscSection*)
    int PetscSectionCreateSubsection(PetscSection,PetscInt,PetscInt[],PetscSection*)
    int PetscSectionCreateSubmeshSection(PetscSection,IS,PetscSection*)
    #int PetscSectionGetPointLayout(MPI_Comm,PetscSection,PetscLayout*)
    #int PetscSectionGetValueLayout(MPI_Comm,PetscSection,PetscLayout*)
